--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <form (ngSubmit)="onSubmit()" #f="ngForm">
+    <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
       <div class="row">
         <div class="col-xs-12">
           <button type="submit" class="btn btn-success">Save</button>
@@ -13,7 +13,12 @@
         <div class="col-xs-12">
           <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" id="name" class="form-control" />
+            <input
+              type="text"
+              id="name"
+              formControlName="name"
+              class="form-control"
+            />
           </div>
         </div>
       </div>
@@ -21,7 +26,13 @@
         <div class="col-xs-12">
           <div class="form-group">
             <label for="imagePath">Image URL</label>
-            <input type="text" id="imagePath" class="form-control" #imagePath />
+            <input
+              type="text"
+              id="imagePath"
+              formControlName="imagePath"
+              class="form-control"
+              #imagePath
+            />
           </div>
         </div>
       </div>
@@ -38,6 +49,7 @@
               type="text"
               id="description"
               class="form-control"
+              formControlName="description"
               rows="6"
             ></textarea>
           </div>
@@ -45,12 +57,24 @@
       </div>
       <div class="row">
         <div class="col-xs-12" formArrayName="ingredients">
-          <div class="row" style="margin-top: 10px">
+          <div
+            class="row"
+            *ngFor="
+              let ingredientCtrl of getRecipeIngredientsControls();
+              let i = index
+            "
+            style="margin-top: 10px"
+            [formGroupName]="i"
+          >
             <div class="col-xs-8">
-              <input type="text" class="form-control" />
+              <input type="text" class="form-control" formControlName="name" />
             </div>
             <div class="col-xs-2">
-              <input type="number" class="form-control" />
+              <input
+                type="number"
+                class="form-control"
+                formControlName="amount"
+              />
             </div>
             <div class="col-xs-2">
               <button type="button" class="btn btn-danger">X</button>
