--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -38,7 +38,12 @@
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <img [src]="imagePath.value" class="img-responsive" />
+          <img
+            [src]="imagePath.value"
+            class="img-responsive"
+            height="200"
+            width="200"
+          />
         </div>
       </div>
       <div class="row">
