delete and cancel functionality

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -26,9 +26,13 @@
           >
         </li>
         <li>
-          <a style="cursor: pointer" (click)="onEditRecipe()">Edit Recipe</a>
+          <a style="cursor: pointer" (click)="onEditRecipe()"> Edit Recipe </a>
         </li>
-        <li><a style="cursor: pointer">Delete Recipe</a></li>
+        <li>
+          <a style="cursor: pointer" (click)="onDeleteRecipe()">
+            Delete Recipe
+          </a>
+        </li>
       </ul>
     </div>
   </div>
