--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -82,7 +82,13 @@
               />
             </div>
             <div class="col-xs-2">
-              <button type="button" class="btn btn-danger">X</button>
+              <button
+                (click)="onDeleteIngredient(i)"
+                type="button"
+                class="btn btn-danger"
+              >
+                X
+              </button>
             </div>
           </div>
           <hr />
